--- a/blog-detail-2.html
+++ b/blog-detail-2.html
@@ -4,14 +4,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cara Merawat Jenggot Agar Lebat - Barbershop Modern</title>
+    <title>Cara Merawat Jenggot Agar Lebat dan Rapi | Tips Barbershop</title>
+
+    <meta name="description"
+        content="Tips lengkap cara merawat jenggot agar tumbuh lebat, sehat, dan rapi. Panduan penggunaan beard oil, teknik trimming, dan pola hidup sehat.">
+    <meta name="keywords"
+        content="Cara Merawat Jenggot, Tips Menumbuhkan Jenggot, Beard Oil, Trimming Jenggot, Grooming Pria">
+    <meta name="author" content="Satria - Barbershop Modern">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://www.barbershopmodern.com/blog-detail-2.html">
+
+    <meta property="og:type" content="article">
+    <meta property="og:title" content="Cara Merawat Jenggot Agar Lebat dan Rapi">
+    <meta property="og:description"
+        content="Punya jenggot impian bukan lagi sekadar angan. Ikuti langkah mudah perawatannya di sini.">
+    <meta property="og:image" content="https://www.barbershopmodern.com/img/artikel2.jpg">
+    <meta property="og:url" content="https://www.barbershopmodern.com/blog-detail-2.html">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="img/favicon/site.webmanifest">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700;800&family=Poppins:wght@300;400;500;600&display=swap"
         rel="stylesheet">
+
+    <link rel="preload" as="image" href="img/artikel2.jpg">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BlogPosting",
+      "headline": "Cara Merawat Jenggot Agar Lebat dan Rapi",
+      "image": "img/artikel2.jpg",
+      "author": {
+        "@type": "Person",
+        "name": "Satria"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "Barbershop Modern",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "img/logo.png"
+        }
+      },
+      "datePublished": "2025-12-28",
+      "description": "Panduan lengkap perawatan jenggot pria modern."
+    }
+    </script>
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [{
+        "@type": "Question",
+        "name": "Apakah sering mencukur membuat jenggot tumbuh lebih lebat?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Itu hanya mitos. Mencukur tidak mempengaruhi ketebalan atau kecepatan pertumbuhan rambut dari akarnya."
+        }
+      }, {
+        "@type": "Question",
+        "name": "Kenapa jenggot saya terasa gatal saat baru tumbuh?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Gatal disebabkan oleh kulit kering dan ujung rambut yang tajam setelah dicukur. Gunakan beard oil untuk meredakannya."
+        }
+      }]
+    }
+    </script>
 
     <style>
         /* ================= VARIABLES & RESET ================= */
@@ -77,28 +145,6 @@
             color: var(--gold);
         }
 
-        .section-title {
-            text-align: center;
-            margin-bottom: 60px;
-        }
-
-        .section-title h3 {
-            font-family: var(--font-head);
-            font-size: 36px;
-            font-weight: 700;
-            text-transform: uppercase;
-            letter-spacing: 2px;
-            margin-bottom: 15px;
-            color: var(--white);
-        }
-
-        .section-title span {
-            width: 60px;
-            height: 4px;
-            background: var(--gold);
-            display: inline-block;
-        }
-
         /* ================= NAVBAR ================= */
         nav {
             position: fixed;
@@ -121,14 +167,22 @@
             font-weight: 800;
             letter-spacing: 2px;
             color: var(--white);
+            z-index: 1001;
         }
 
-        nav ul {
+        /* Nav Menu Wrapper untuk Desktop */
+        .nav-menu {
+            display: flex;
+            align-items: center;
+            gap: 40px;
+        }
+
+        .nav-menu ul {
             display: flex;
             gap: 40px;
         }
 
-        nav ul li a {
+        .nav-menu ul li a {
             font-size: 14px;
             font-weight: 500;
             text-transform: uppercase;
@@ -136,57 +190,40 @@
             color: var(--gray);
         }
 
-        nav ul li a:hover,
-        nav ul li a.active {
+        .nav-menu ul li a:hover,
+        .nav-menu ul li a.active {
             color: var(--gold);
         }
 
-        nav .btn {
+        .nav-menu .btn {
             padding: 8px 20px;
             font-size: 12px;
         }
 
-        /* ================= BLOG DETAIL LAYOUT (WIDE) ================= */
+        /* Hamburger Icon (Hidden on Desktop) */
+        .hamburger {
+            display: none;
+            cursor: pointer;
+            z-index: 1001;
+        }
+
+        .bar {
+            display: block;
+            width: 25px;
+            height: 3px;
+            margin: 5px auto;
+            transition: all 0.3s ease-in-out;
+            background-color: var(--white);
+        }
+
+        /* ================= BLOG DETAIL LAYOUT ================= */
         .blog-wrapper {
             padding: 140px 8% 80px;
             max-width: 1300px;
             margin: 0 auto;
         }
 
-        /* 1. SEARCH BAR */
-        .search-container {
-            margin-bottom: 40px;
-            display: flex;
-            background: var(--dark2);
-            border: 1px solid #333;
-            border-radius: 50px;
-            padding: 5px;
-            max-width: 600px;
-            margin-left: auto;
-            margin-right: auto;
-        }
-
-        .search-container input {
-            flex: 1;
-            background: transparent;
-            border: none;
-            padding: 10px 20px;
-            color: var(--white);
-            font-family: var(--font-body);
-            outline: none;
-        }
-
-        .search-container button {
-            background: var(--gold);
-            color: #000;
-            border: none;
-            width: 40px;
-            height: 40px;
-            border-radius: 50%;
-            cursor: pointer;
-        }
-
-        /* 2. HEADER ARTIKEL */
+        /* HEADER ARTIKEL */
         .article-header {
             text-align: center;
             margin-bottom: 50px;
@@ -219,7 +256,7 @@
             margin-bottom: 50px;
         }
 
-        /* 3. TABLE OF CONTENT */
+        /* TABLE OF CONTENT */
         .toc-box {
             background: var(--dark2);
             border: 1px solid var(--gold);
@@ -261,7 +298,7 @@
             text-decoration: underline;
         }
 
-        /* 4. CONTENT STYLING */
+        /* CONTENT STYLING */
         .article-content {
             font-size: 18px;
             color: #ddd;
@@ -314,7 +351,7 @@
             margin: 50px 0;
         }
 
-        /* 5. FAQ SECTION */
+        /* FAQ SECTION - Optimized H2 */
         .faq-section {
             margin-top: 60px;
             background: var(--dark2);
@@ -325,10 +362,12 @@
             margin-right: auto;
         }
 
-        .faq-section h3 {
+        .faq-section h2 {
             font-family: var(--font-head);
             color: var(--gold);
             margin-bottom: 20px;
+            font-size: 28px;
+            font-weight: 700;
         }
 
         .faq-item {
@@ -349,7 +388,7 @@
             margin: 0;
         }
 
-        /* 6. SOCIAL SHARE */
+        /* SOCIAL SHARE */
         .share-section {
             margin-top: 80px;
             text-align: center;
@@ -394,7 +433,7 @@
             transform: translateY(-3px);
         }
 
-        /* 7. AUTHOR PROFILE (NEW CSS) */
+        /* AUTHOR PROFILE */
         .author-box {
             margin-top: 60px;
             background: var(--dark2);
@@ -441,11 +480,33 @@
             margin: 0;
         }
 
-        /* ================= RELATED ARTICLES ================= */
+        /* RELATED ARTICLES - Optimized H2 */
         .related-wrapper {
             background: var(--dark-alt);
             padding: 80px 8%;
             border-top: 1px solid #333;
+        }
+
+        .section-title {
+            text-align: center;
+            margin-bottom: 50px;
+        }
+
+        .section-title h2 {
+            font-family: var(--font-head);
+            font-size: 32px;
+            font-weight: 700;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            margin-bottom: 15px;
+            color: var(--white);
+        }
+
+        .section-title span {
+            width: 60px;
+            height: 4px;
+            background: var(--gold);
+            display: inline-block;
         }
 
         .blog-grid {
@@ -534,7 +595,7 @@
             gap: 5px;
         }
 
-        /* ================= FOOTER ================= */
+        /* FOOTER */
         footer {
             background: #080808;
             color: var(--gray);
@@ -605,25 +666,59 @@
             color: #555;
         }
 
-        /* ================= RESPONSIVE ================= */
+        /* RESPONSIVE */
         @media (max-width: 768px) {
-            nav {
+
+            /* Navbar Mobile Style */
+            .hamburger {
+                display: block;
+            }
+
+            .hamburger.active .bar:nth-child(2) {
+                opacity: 0;
+            }
+
+            .hamburger.active .bar:nth-child(1) {
+                transform: translateY(8px) rotate(45deg);
+            }
+
+            .hamburger.active .bar:nth-child(3) {
+                transform: translateY(-8px) rotate(-45deg);
+            }
+
+            .nav-menu {
+                position: absolute;
+                top: 70px;
+                /* Tinggi navbar */
+                left: -100%;
+                /* Sembunyikan ke kiri */
                 flex-direction: column;
-                padding: 15px;
-                gap: 15px;
+                background-color: rgba(15, 15, 15, 0.98);
+                width: 100%;
+                text-align: center;
+                transition: 0.3s;
+                padding: 30px 0;
+                border-bottom: 1px solid #333;
+                gap: 25px;
+                box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5);
             }
 
-            nav ul {
-                gap: 20px;
-                font-size: 13px;
-                flex-wrap: wrap;
-                justify-content: center;
+            .nav-menu.active {
+                left: 0;
+                /* Munculkan */
             }
 
-            nav .btn {
-                display: none;
+            .nav-menu ul {
+                flex-direction: column;
+                gap: 25px;
             }
 
+            .nav-menu .btn {
+                display: inline-block;
+                margin-top: 10px;
+            }
+
+            /* Adjust Blog Wrapper */
             .blog-wrapper {
                 padding: 100px 5% 60px;
             }
@@ -666,22 +761,26 @@
 
     <nav>
         <h1>BARBERSHOP</h1>
-        <ul>
-            <li><a href="index.html">Beranda</a></li>
-            <li><a href="layanan.html">Layanan</a></li>
-            <li><a href="barber.html">Barbers</a></li>
-            <li><a href="galeri.html">Galeri Foto</a></li>
-            <li><a href="blog.html" class="active">Blog</a></li>
-        </ul>
-        <a href="#" class="btn">Booking Now</a>
+
+        <div class="nav-menu" id="navMenu">
+            <ul>
+                <li><a href="index.html">Beranda</a></li>
+                <li><a href="layanan.html">Layanan</a></li>
+                <li><a href="barber.html">Barbers</a></li>
+                <li><a href="galeri.html">Galeri Foto</a></li>
+                <li><a href="blog.html" class="active">Blog</a></li>
+            </ul>
+            <a href="#" class="btn">Booking Now</a>
+        </div>
+
+        <div class="hamburger" id="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
     </nav>
 
     <div class="blog-wrapper">
-
-        <div class="search-container">
-            <input type="text" placeholder="Cari di artikel ini...">
-            <button><i class="fas fa-search"></i></button>
-        </div>
 
         <div class="article-header">
             <div class="article-meta">Tips • 28 Des 2025 • Oleh Admin</div>
@@ -690,7 +789,7 @@
                 trimming yang benar.</p>
         </div>
 
-        <img src="img/artikel2.jpg" alt="Perawatan Jenggot" class="article-img-top">
+        <img src="img/artikel2.jpg" alt="Perawatan Jenggot" class="article-img-top" width="1000" height="500">
 
         <div class="toc-box">
             <div class="toc-toggle" onclick="toggleToc()">
@@ -733,7 +832,8 @@
             <p>Meskipun Anda ingin memanjangkan jenggot, trimming (memotong ujung) tetap diperlukan untuk membuang ujung
                 yang bercabang dan menjaga bentuknya. Gunakan gunting kecil atau trimmer dengan guard yang sesuai.</p>
 
-            <img src="img/2artikel.jpg" alt="Beard Oil dan Tools" class="article-img-bottom">
+            <img src="img/2artikel.jpg" alt="Ilustrasi Beard Oil dan Tools" class="article-img-bottom" loading="lazy"
+                width="1000" height="450">
 
             <h2 id="step4">4. Pola Makan Sehat</h2>
             <p>Pertumbuhan rambut dipengaruhi dari dalam. Konsumsi makanan kaya protein, biotin, dan vitamin E seperti
@@ -745,7 +845,7 @@
         </div>
 
         <div class="faq-section">
-            <h3>Pertanyaan Umum (FAQ)</h3>
+            <h2>Pertanyaan Umum (FAQ)</h2>
             <div class="faq-item">
                 <h4>Apakah sering mencukur membuat jenggot tumbuh lebih lebat?</h4>
                 <p>Itu hanya mitos. Mencukur tidak mempengaruhi ketebalan atau kecepatan pertumbuhan rambut dari
@@ -760,7 +860,7 @@
 
         <div class="author-box">
             <img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?q=80&w=200&auto=format&fit=crop"
-                alt="Satria" class="author-img">
+                alt="Satria" class="author-img" loading="lazy">
             <div class="author-info">
                 <h4>Satria</h4>
                 <span>Senior Barber & Content Writer</span>
@@ -782,14 +882,14 @@
 
     <div class="related-wrapper">
         <div class="section-title">
-            <h3>Artikel Lainnya</h3>
+            <h2>Artikel Lainnya</h2>
             <span></span>
         </div>
 
         <div class="blog-grid">
             <div class="blog-card">
                 <div class="blog-img">
-                    <img src="img/artikel1.jpg" alt="Tren Rambut">
+                    <img src="img/artikel1.jpg" alt="Tren Rambut" loading="lazy">
                 </div>
                 <div class="blog-content">
                     <div class="blog-meta">Tren • 5 Jan 2026</div>
@@ -801,7 +901,7 @@
 
             <div class="blog-card">
                 <div class="blog-img">
-                    <img src="img/artikel3.jpg" alt="Barbershop Routine">
+                    <img src="img/artikel3.jpg" alt="Barbershop Routine" loading="lazy">
                 </div>
                 <div class="blog-content">
                     <div class="blog-meta">Lifestyle • 10 Des 2025</div>
@@ -888,6 +988,21 @@
                 tocIcon.classList.add("fa-chevron-down");
             }
         }
+
+        // === LOGIKA HAMBURGER MENU ===
+        const hamburger = document.getElementById("hamburger");
+        const navMenu = document.getElementById("navMenu");
+
+        hamburger.addEventListener("click", () => {
+            hamburger.classList.toggle("active");
+            navMenu.classList.toggle("active");
+        });
+
+        // Tutup menu saat link diklik
+        document.querySelectorAll(".nav-menu a").forEach(n => n.addEventListener("click", () => {
+            hamburger.classList.remove("active");
+            navMenu.classList.remove("active");
+        }));
     </script>
 
 </body>
