--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <meta name="keywords"
         content="Barbershop Malang, Potong Rambut Pria, Cukur Rambut Malang, Barbershop Terdekat, Haircut Malang">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://www.barbershopmodern.com/">
+    <link rel="canonical" href="https://barberr-five.vercel.app/">
 
     <meta property="og:type" content="website">
     <meta property="og:title" content="Barbershop Modern - Gaya Rambut Pria Terkini">
     <meta property="og:description"
         content="Tampil percaya diri dengan gaya rambut terbaru. Pelayanan premium harga bersahabat.">
-    <meta property="og:image" content="https://www.barbershopmodern.com/img/bg.jpg">
-    <meta property="og:url" content="https://www.barbershopmodern.com/">
+    <meta property="og:image" content="https://barberr-five.vercel.app/img/about.jpg">
+    <meta property="og:url" content="https://barberr-five.vercel.app/">
 
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
@@ -38,7 +38,7 @@
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
       "name": "Barbershop Modern",
-      "image": "img/bg.jpg",
+      "image": "img/about.jpg",
       "description": "Barbershop terbaik di Malang dengan layanan premium.",
       "address": {
         "@type": "PostalAddress",
