--- a/blog-detail-1.html
+++ b/blog-detail-1.html
@@ -12,14 +12,14 @@
         content="Model Rambut Pria 2026, Tren Rambut Pria, Neo Mullet, French Crop, Gaya Rambut Pendek Pria, Barbershop Modern">
     <meta name="author" content="Satria - Barbershop Modern">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://www.barbershopmodern.com/blog-detail-1.html">
+    <link rel="canonical" href="https://barberr-five.vercel.app/blog-detail-1.html">
 
     <meta property="og:type" content="article">
     <meta property="og:title" content="5 Model Rambut Pria Tren 2026">
     <meta property="og:description"
         content="Ingin tampil beda? Simak prediksi gaya rambut yang bakal hits tahun depan.">
-    <meta property="og:image" content="https://www.barbershopmodern.com/img/artikel1.jpg">
-    <meta property="og:url" content="https://www.barbershopmodern.com/blog-detail-1.html">
+    <meta property="og:image" content="https://barberr-five.vercel.app/img/artikel1.jpg">
+    <meta property="og:url" content="https://barberr-five.vercel.app/blog-detail-1.html">
 
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
