--- a/blog-detail-2.html
+++ b/blog-detail-2.html
@@ -12,14 +12,14 @@
         content="Cara Merawat Jenggot, Tips Menumbuhkan Jenggot, Beard Oil, Trimming Jenggot, Grooming Pria">
     <meta name="author" content="Satria - Barbershop Modern">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://www.barbershopmodern.com/blog-detail-2.html">
+    <link rel="canonical" href="https://barberr-five.vercel.app/blog-detail-2.html">
 
     <meta property="og:type" content="article">
     <meta property="og:title" content="Cara Merawat Jenggot Agar Lebat dan Rapi">
     <meta property="og:description"
         content="Punya jenggot impian bukan lagi sekadar angan. Ikuti langkah mudah perawatannya di sini.">
-    <meta property="og:image" content="https://www.barbershopmodern.com/img/artikel2.jpg">
-    <meta property="og:url" content="https://www.barbershopmodern.com/blog-detail-2.html">
+    <meta property="og:image" content="https://barberr-five.vercel.app/img/artikel2.jpg">
+    <meta property="og:url" content="https://barberr-five.vercel.app/blog-detail-2.html">
 
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
