--- a/blog-detail-3.html
+++ b/blog-detail-3.html
@@ -12,13 +12,13 @@
         content="Manfaat Cukur Rambut, Rutinitas Potong Rambut, Kesehatan Kulit Kepala, Frekuensi Cukur Ideal, Barbershop Tips">
     <meta name="author" content="Satria - Barbershop Modern">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://www.barbershopmodern.com/blog-detail-3.html">
+    <link rel="canonical" href="https://barberr-five.vercel.app/blog-detail-3.html">
 
     <meta property="og:type" content="article">
     <meta property="og:title" content="Kenapa Harus Cukur Rutin?">
     <meta property="og:description" content="Rambut sehat dan penampilan rapi dimulai dari jadwal cukur yang teratur.">
-    <meta property="og:image" content="https://www.barbershopmodern.com/img/artikel3.jpg">
-    <meta property="og:url" content="https://www.barbershopmodern.com/blog-detail-3.html">
+    <meta property="og:image" content="https://barberr-five.vercel.app/img/artikel3.jpg">
+    <meta property="og:url" content="https://barberr-five.vercel.app/blog-detail-3.html">
 
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
