--- a/blog.html
+++ b/blog.html
@@ -12,13 +12,13 @@
         content="Blog Barbershop, Tips Rambut Pria, Gaya Rambut 2026, Perawatan Jenggot, Artikel Grooming Pria">
     <meta name="author" content="Barbershop Modern">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://www.barbershopmodern.com/blog.html">
+    <link rel="canonical" href="https://barberr-five.vercel.app/blog.html">
 
     <meta property="og:type" content="blog">
     <meta property="og:title" content="Blog & Artikel - Barbershop Modern">
     <meta property="og:description" content="Temukan inspirasi gaya rambut dan tips perawatan pria terlengkap.">
     <meta property="og:image" content="https://images.unsplash.com/photo-1521590832169-7dad1a9b708c">
-    <meta property="og:url" content="https://www.barbershopmodern.com/blog.html">
+    <meta property="og:url" content="https://barberr-five.vercel.app/blog.html">
 
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
@@ -42,7 +42,7 @@
       "@type": "Blog",
       "name": "Barbershop Modern Blog",
       "description": "Tips dan trik seputar perawatan rambut dan gaya pria.",
-      "url": "https://www.barbershopmodern.com/blog.html",
+      "url": "https://barberr-five.vercel.app/blog.html",
       "publisher": {
         "@type": "Organization",
         "name": "Barbershop Modern",
