--- a/galeri.html
+++ b/galeri.html
@@ -11,14 +11,14 @@
     <meta name="keywords"
         content="Galeri Barbershop, Foto Potong Rambut, Model Rambut Pria, Haircut Gallery, Barbershop Malang Foto">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://www.barbershopmodern.com/galeri.html">
+    <link rel="canonical" href="https://barberr-five.vercel.app/galeri.html">
 
     <meta property="og:type" content="website">
     <meta property="og:title" content="Galeri & Portofolio - Barbershop Modern">
     <meta property="og:description"
         content="Koleksi lengkap hasil karya barber kami. Temukan inspirasi gaya rambutmu di sini.">
     <meta property="og:image" content="https://images.unsplash.com/photo-1599351431202-1e0f0137899a">
-    <meta property="og:url" content="https://www.barbershopmodern.com/galeri.html">
+    <meta property="og:url" content="https://barberr-five.vercel.app/galeri.html">
 
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
@@ -40,7 +40,7 @@
     {
       "@context": "https://schema.org",
       "@type": "ImageObject",
-      "contentUrl": "https://www.barbershopmodern.com/img/galeri1.jpg",
+      "contentUrl": "https://barberr-five.vercel.app/img/galeri1.jpg",
       "name": "Professional Haircut",
       "author": {
         "@type": "LocalBusiness",
