--- a/layanan.html
+++ b/layanan.html
@@ -11,14 +11,14 @@
     <meta name="keywords"
         content="Harga Potong Rambut Malang, Layanan Barbershop, Haircut Pria, Beard Trim, Hair Coloring, Barbershop Premium">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://www.barbershopmodern.com/layanan.html">
+    <link rel="canonical" href="https://barberr-five.vercel.app/layanan.html">
 
     <meta property="og:type" content="website">
     <meta property="og:title" content="Layanan & Harga Spesial - Barbershop Modern">
     <meta property="og:description"
         content="Cek daftar harga potong rambut terbaru kami. Dapatkan pelayanan premium dengan harga terjangkau.">
     <meta property="og:image" content="https://images.unsplash.com/photo-1503951914875-befbb6470523">
-    <meta property="og:url" content="https://www.barbershopmodern.com/layanan.html">
+    <meta property="og:url" content="https://barberr-five.vercel.app/layanan.html">
 
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
