--- a/layanan.html
+++ b/layanan.html
@@ -17,7 +17,7 @@
     <meta property="og:title" content="Layanan & Harga Spesial - Barbershop Modern">
     <meta property="og:description"
         content="Cek daftar harga potong rambut terbaru kami. Dapatkan pelayanan premium dengan harga terjangkau.">
-    <meta property="og:image" content="https://images.unsplash.com/photo-1503951914875-befbb6470523">
+    <meta property="og:image" content="https://barberr-five.vercel.app/img.about.jpg">
     <meta property="og:url" content="https://barberr-five.vercel.app/layanan.html">
 
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
@@ -30,8 +30,7 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700;800&family=Poppins:wght@300;400;500&display=swap"
         rel="stylesheet">
 
-    <link rel="preload" as="image"
-        href="https://images.unsplash.com/photo-1503951914875-befbb6470523?q=80&w=2000&auto=format&fit=crop">
+    <link rel="preload" as="image" href="https://barberr-five.vercel.app/img/about.jpg">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
