--- a/layanan.html
+++ b/layanan.html
@@ -42,7 +42,7 @@
       "provider": {
         "@type": "LocalBusiness",
         "name": "Barbershop Modern",
-        "image": "img/logo.png",
+        "image": "img/about.jpg",
         "address": {
           "@type": "PostalAddress",
           "streetAddress": "Jl. Veteran No. 45",
