--- a/layanan.html
+++ b/layanan.html
@@ -17,7 +17,7 @@
     <meta property="og:title" content="Layanan & Harga Spesial - Barbershop Modern">
     <meta property="og:description"
         content="Cek daftar harga potong rambut terbaru kami. Dapatkan pelayanan premium dengan harga terjangkau.">
-    <meta property="og:image" content="https://barberr-five.vercel.app/img.about.jpg">
+    <meta property="og:image" content="https://barberr-five.vercel.app/img/about.jpg">
     <meta property="og:url" content="https://barberr-five.vercel.app/layanan.html">
 
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
