--- a/galeri.html
+++ b/galeri.html
@@ -17,7 +17,7 @@
     <meta property="og:title" content="Galeri & Portofolio - Barbershop Modern">
     <meta property="og:description"
         content="Koleksi lengkap hasil karya barber kami. Temukan inspirasi gaya rambutmu di sini.">
-    <meta property="og:image" content="https://images.unsplash.com/photo-1599351431202-1e0f0137899a">
+    <meta property="og:image" content="https://barberr-five.vercel.app/img/about.jpg">
     <meta property="og:url" content="https://barberr-five.vercel.app/galeri.html">
 
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
@@ -32,7 +32,7 @@
         rel="stylesheet">
 
     <link rel="preload" as="image"
-        href="https://images.unsplash.com/photo-1599351431202-1e0f0137899a?q=80&w=2000&auto=format&fit=crop">
+        href="https://barberr-five.vercel.app/img/about.jpg">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
@@ -40,7 +40,7 @@
     {
       "@context": "https://schema.org",
       "@type": "ImageObject",
-      "contentUrl": "https://barberr-five.vercel.app/img/galeri1.jpg",
+      "contentUrl": "https://barberr-five.vercel.app/img/about.jpg",
       "name": "Professional Haircut",
       "author": {
         "@type": "LocalBusiness",
