--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,7 @@
     <meta property="og:type" content="blog">
     <meta property="og:title" content="Blog & Artikel - Barbershop Modern">
     <meta property="og:description" content="Temukan inspirasi gaya rambut dan tips perawatan pria terlengkap.">
-    <meta property="og:image" content="https://images.unsplash.com/photo-1521590832169-7dad1a9b708c">
+    <meta property="og:image" content="https://barberr-five.vercel.app/img/about.jpg">
     <meta property="og:url" content="https://barberr-five.vercel.app/blog.html">
 
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
@@ -32,7 +32,7 @@
         rel="stylesheet">
 
     <link rel="preload" as="image"
-        href="https://images.unsplash.com/photo-1521590832169-7dad1a9b708c?q=80&w=2000&auto=format&fit=crop">
+        href="https://barberr-five.vercel.app/img/about.jpg">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
