--- a/blog.html
+++ b/blog.html
@@ -31,8 +31,7 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700;800&family=Poppins:wght@300;400;500&display=swap"
         rel="stylesheet">
 
-    <link rel="preload" as="image"
-        href="https://barberr-five.vercel.app/img/about.jpg">
+    <link rel="preload" as="image" href="https://barberr-five.vercel.app/img/about.jpg">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
@@ -680,10 +679,10 @@
                 </div>
                 <div class="blog-content">
                     <div class="blog-meta">Produk • 15 Nov 2025</div>
-                    <h3><a href="#">Pomade, Wax, atau Clay? Pilih yang Cocok untuk Rambutmu</a></h3>
+                    <h3><a href="blog-detail-4.html">Pomade, Wax, atau Clay? Pilih yang Cocok untuk Rambutmu</a></h3>
                     <p>Bingung milih produk styling? Kenali perbedaan tekstur dan hasil akhirnya, apakah glossy atau
                         matte.</p>
-                    <a href="#" class="read-more">Baca Selengkapnya <i class="fas fa-arrow-right"></i></a>
+                    <a href="blog-detail-4.html" class="read-more">Baca Selengkapnya <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
 
@@ -694,10 +693,10 @@
                 </div>
                 <div class="blog-content">
                     <div class="blog-meta">Tips • 2 Nov 2025</div>
-                    <h3><a href="#">Panduan Memilih Potongan Rambut Sesuai Bentuk Wajah</a></h3>
+                    <h3><a href="blog-detail-5.html">Panduan Memilih Potongan Rambut Sesuai Bentuk Wajah</a></h3>
                     <p>Wajah bulat, oval, atau kotak? Jangan salah pilih model. Temukan potongan yang memaksimalkan
                         fitur wajahmu.</p>
-                    <a href="#" class="read-more">Baca Selengkapnya <i class="fas fa-arrow-right"></i></a>
+                    <a href="blog-detail-5.html" class="read-more">Baca Selengkapnya <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
 
@@ -708,10 +707,10 @@
                 </div>
                 <div class="blog-content">
                     <div class="blog-meta">Kesehatan • 20 Okt 2025</div>
-                    <h3><a href="#">Cara Ampuh Mengatasi Ketombe Membandel pada Pria</a></h3>
+                    <h3><a href="blog-detail-6.html">Cara Ampuh Mengatasi Ketombe Membandel pada Pria</a></h3>
                     <p>Ketombe bikin gak pede dan gatal? Simak penyebab utamanya dan cara mengatasinya secara alami
                         maupun medis.</p>
-                    <a href="#" class="read-more">Baca Selengkapnya <i class="fas fa-arrow-right"></i></a>
+                    <a href="blog-detail-6.html" class="read-more">Baca Selengkapnya <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
 
@@ -722,10 +721,10 @@
                 </div>
                 <div class="blog-content">
                     <div class="blog-meta">Tren • 5 Okt 2025</div>
-                    <h3><a href="#">Tren Hair Tattoo: Seni Ukir Rambut yang Makin Diminati</a></h3>
+                    <h3><a href="blog-detail-7.html">Tren Hair Tattoo: Seni Ukir Rambut yang Makin Diminati</a></h3>
                     <p>Tampil beda dengan desain hair tattoo yang artistik. Inspirasi motif simpel hingga rumit untuk
                         gaya maksimal.</p>
-                    <a href="#" class="read-more">Baca Selengkapnya <i class="fas fa-arrow-right"></i></a>
+                    <a href="blog-detail-7.html" class="read-more">Baca Selengkapnya <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
 
@@ -736,10 +735,10 @@
                 </div>
                 <div class="blog-content">
                     <div class="blog-meta">Edukasi • 28 Sep 2025</div>
-                    <h3><a href="#">Muncul Uban di Usia Muda? Ini Penyebab dan Solusinya</a></h3>
+                    <h3><a href="blog-detail-8.html">Muncul Uban di Usia Muda? Ini Penyebab dan Solusinya</a></h3>
                     <p>Stres atau genetik? Cari tahu kenapa rambut memutih lebih cepat dan cara merawatnya agar tetap
                         sehat.</p>
-                    <a href="#" class="read-more">Baca Selengkapnya <i class="fas fa-arrow-right"></i></a>
+                    <a href="blog-detail-8.html" class="read-more">Baca Selengkapnya <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
 
@@ -750,10 +749,10 @@
                 </div>
                 <div class="blog-content">
                     <div class="blog-meta">Kids • 12 Sep 2025</div>
-                    <h3><a href="#">Tips Agar Anak Tidak Rewel Saat Potong Rambut</a></h3>
+                    <h3><a href="blog-detail-9.html">Tips Agar Anak Tidak Rewel Saat Potong Rambut</a></h3>
                     <p>Mengajak si kecil ke barbershop bisa jadi tantangan. Coba trik psikologis ini agar mereka tenang
                         saat dicukur.</p>
-                    <a href="#" class="read-more">Baca Selengkapnya <i class="fas fa-arrow-right"></i></a>
+                    <a href="blog-detail-9.html" class="read-more">Baca Selengkapnya <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
 
